--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "chart.js": "^4.0.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
